Correccion en el recorrido In Order